--- a/Weather_monitor_station/.project
+++ b/Weather_monitor_station/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MKL25Z128xxx4_Project</name>
+	<name>Weather_monitor_station</name>
 	<comment></comment>
 	<projects>
 	</projects>
